plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.4'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.darkmatterservers'
version = '0.2.4'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenLocal()
    mavenCentral()
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

dependencies {
    // ✅ Spring Boot Web (embedded Tomcat)
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // ✅ Discord JDA
    implementation 'net.dv8tion:JDA:5.6.1'

    // ✅ EclipseBytes from local Maven
    implementation 'com.darkmatterservers:eclipsebytes:1.0.1'

    // ✅ Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // ✅ Tests
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

/*
 * ✅ BootJar will now be the default packaging
 *   - Includes Spring Boot loader and BOOT-INF layout
 *   - No Shadow plugin needed
 */
tasks.named('bootJar') {
    enabled = true
    archiveFileName.set("EclipseBot-${version}.jar")
}

tasks.named('jar') {
    enabled = false
}
